# SimpleSSDsim

./: ADCT.c  ADCT.h  ADLRU.c  ADLRU.h  BPLRU.c  BPLRU.h  BlkList.c  BlkList.h  CASA.c  CASA.h  CCFLRU.c  CCFLRU.h  CFLRU.c  CFLRU.h  CMakeLists.txt  Cache.c  Cache.h  FAB.c  FAB.h  HotDataAware.c  HotDataAware.h  HotDateAware.c  HotDateAware.h  Interface.c  Interface.h  LRU.c  LRU.h  LRUWSR.c  LRUWSR.h  List.c  List.h  PUDLRU.c  PUDLRU.h  README.md  SSDsim.c  SSDsim.h  ceshi.outv  dftl.c  dftl.h  fast.c  (+9 more)
ceshi/: ceshi.outv
config_parv/: ADCT.parv  ADLRU.parv  BPLRU.parv  CASA.parv  CCFLRU.parv  FAB.parv  LRUWSR.parv  PUDLRU.parv  peizhi.parv
config_parv/DFTL/: ADCT.parv  BPLRU.parv
output/: ADCT.outv  ADLRU.outv  BPLRU.outv  CCFLRU.outv  FAB.outv  LRU.outv  LRUWSR.outv  ceshi.outv
output/DFTL/: ADCT.outv  BPLRU.outv
